fix:wheel overlapping

--- a/static/css/wheel.css
+++ b/static/css/wheel.css
@@ -159,3 +159,11 @@
 	width: 50%;
 	height: 50%;
 }
+
+.wheel-container{
+	height:650px;
+}
+
+.container-text{
+	height:150px;
+}
